added user content to the User page

--- a/src/App.css
+++ b/src/App.css
@@ -285,7 +285,7 @@ img {
 .alert-white {
   background: var(--dark-surface-color);
   color: var(--light-color);
-  border: #ccc solid 1px;
+  /* border: #ccc solid 1px; */
 }
 
 .btn:hover {
